@@ -1,3 +1,8 @@
+2015-01-06  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* freeze.adb (Freeze_Array_Type) <Complain_CS>: Remove always
+	true test and unreachable 'else' arm.
+
 2015-01-06  Vincent Celier  <celier@adacore.com>
 
 	* prj-conf.adb (Check_Target): Improve error message when
